Bug 452560 - Replace Deploy and Deploy As Buttons with a Run Bar - Fixed app info vertical alignment issues on IE

--- a/bundles/org.eclipse.orion.client.ui/web/orion/widgets/projects/RunBar.css
+++ b/bundles/org.eclipse.orion.client.ui/web/orion/widgets/projects/RunBar.css
@@ -175,7 +175,7 @@
 	display: -webkit-inline-flex;		/* Safari */
 	display: inline-flex;
 	margin: 1px 0 0 10px;
-	min-height: 29px;
+	height: 29px;
 	width: 262px;
 	padding: 0 4px;
 	transition: opacity 0.3s ease;
@@ -206,6 +206,7 @@
 	border: none;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	margin-top: -3px;
 }
 
 .appLink:before{ content:'\E030'; }
